--- a/bierdopje-material-v0.2.css
+++ b/bierdopje-material-v0.2.css
@@ -51,8 +51,6 @@ color: #ffffff;
 #ff6d00 orange accent-4
 */
 
-@import url("http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900");
-
 @font-face {
   font-family: 'Material Icons';
   font-style: normal;
@@ -891,5 +889,18 @@ th.forumkop {
 
 #footer p, #footer p a {
 	color: #ffffff;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Roboto'), local('Roboto-Regular'), url(http://fonts.gstatic.com/s/roboto/v15/CWB0XYA8bzo0kSThX0UTuA.woff2) format('woff2');
+}
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Roboto Bold'), local('Roboto-Bold'), url(http://fonts.gstatic.com/s/roboto/v15/d-6IYplOFocCacKzxwXSOFtXRa8TVwTICgirnJhmVJw.woff2) format('woff2');
 }
 }
