--- a/bierdopje-material-alternative-blue-latest.css
+++ b/bierdopje-material-alternative-blue-latest.css
@@ -1,7 +1,7 @@
 @-moz-document domain("bierdopje.com"), domain("bierdopje.eu") {
 /*
 Developed by: Tom
-Version 0.97.1
+Version 0.97.2
 
 Special thanks:
 Google (https://material.google.com/)
@@ -1698,11 +1698,16 @@ th.forumkop.thLeft {
 }
 
 /* Misc */
-.content_links ~ img[src="http://cdn.bierdopje.eu/g/if/icons/new.gif"],
-.content_links ~ img[src="http://cdn.bierdopje.eu/g/if/icons/bullet_star.gif"]{
+.content_links ~ img[src="http://cdn.bierdopje.eu/g/if/icons/new.gif"] {
 	position: absolute;
     margin-top: 1.5px;
     margin-left: 1px;
+}
+
+.content_links ~ img[src="http://cdn.bierdopje.eu/g/if/icons/bullet_star.gif"] {
+	position: absolute;
+    margin-left: 22px;
+    margin-top: 2px;
 }
 
 /* ---------------------------------------------------------------------- */
